@@ -17,13 +17,13 @@ let () = Printexc.record_backtrace true
 exception UncaughtHandlerExn
 exception CallbackExn
 
-let handler exn =
+let handler final_exn exn =
   let id = Thread.self () |> Thread.id in
   let msg = Printexc.to_string exn in
   Printf.eprintf "[thread %d] caught %s\n" id msg;
   Printexc.print_backtrace stderr;
   flush stderr;
-  raise UncaughtHandlerExn
+  raise final_exn
 
 let fn () = Printexc.raise_with_backtrace
               CallbackExn
@@ -32,6 +32,9 @@ let fn () = Printexc.raise_with_backtrace
 let _ =
   let th = Thread.create fn () in
   Thread.join th;
-  Thread.set_uncaught_exception_handler handler;
+  Thread.set_uncaught_exception_handler (handler UncaughtHandlerExn);
+  let th = Thread.create fn () in
+  Thread.join th;
+  Thread.set_uncaught_exception_handler (handler Thread.Exit);
   let th = Thread.create fn () in
   Thread.join th
